--- a/README.Rmd
+++ b/README.Rmd
@@ -24,8 +24,6 @@ Vignette is located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzi
 Rhonda Bacher <rhonda.bacher@gmail.com>
 
 ## Latest Update:
-
-The latest update removes the prior option of PLOT and replaces it with option of SavePDF. SCnorm will automatically generate evaluation plots and by default (SavePDF = TRUE) these are written and saved to the current or given directory. Turning SavePDF=FALSE will print plots to screen or current device.
-
+SCnorm has been updated for Bioconductor submission, along with more details for usage -- please see vignette for complete updates.
 
 
