--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 
 SCnorm is an R package which can be used to normalize single-cell RNA-seq data. 
 
-Details of SCnorm may be found in the vignette located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm.pdf)
+Details of SCnorm may be found in the vignette: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm.pdf)
 
 ## Installation
 
@@ -21,7 +21,15 @@ download the SCnorm from the development branch here:
 
 Rhonda Bacher <rhonda.bacher@gmail.com>
 
-## Latest Update: v0.99.4 
+## Cite
+Please cite SCnorm if you use it in your research:
+
+> Bacher R, Chu LF, Leng N, Gasch AP, Thomson JA, Stewart RM, Newton M, 
+Kendziorski C. SCnorm: robust normalization of single-cell
+RNA-seq data. Nature Methods. 2017 Jun 1;14(6):584-6.
+[https://www.nature.com/nmeth/journal/v14/n6/full/nmeth.4263.html](https://www.nature.com/nmeth/journal/v14/n6/full/nmeth.4263.html)
+
+## Latest Update: v0.99.5
 SCnorm has been updated for Bioconductor submission, along with other updates and more details for usage -- please see vignette for complete updates. 
 
 
